further help styles

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -363,11 +363,13 @@ nav li a
 	width: ;
 	height: auto;
 	border: 1em solid #fff;
+	float: left; 
 }
 
 .help-img-float {
 	display: inline;
 	float: left;
+	margin-right: 1em;
 }
 
 .tone-box {
