fix IE bug re: link styled as button

--- a/htdocs/css/themes-library-contrast.css
+++ b/htdocs/css/themes-library-contrast.css
@@ -305,7 +305,7 @@ button {
 	color: #fff !important;
 }
 
-.button-left:link {
+.button-left:link, .button-left:visited {
 	color: #fff !important;
 }
 
