--- a/htdocs/css/themes-public-default.css
+++ b/htdocs/css/themes-public-default.css
@@ -147,7 +147,7 @@ button {
     background: #183935;
     color: #fff;!important
 }
-.button-left:link {
+.button-left:link, .button-left:visited {
     border: 1px solid inherit;
     background: #183935;
     color: #fff;!important
