--- a/htdocs/css/themes-admin-default.css
+++ b/htdocs/css/themes-admin-default.css
@@ -309,7 +309,7 @@ button {
 	color: #fff !important;
 }
 
-.button-left:link {
+.button-left:link, .button-left:visited {
 	color: #fff !important;
 }
 
