--- a/htdocs/css/themes-library-allison.css
+++ b/htdocs/css/themes-library-allison.css
@@ -316,7 +316,7 @@ button {
 	color: #000 !important;
 }
 
-.button-left:link {
+.button-left:link, .button-left:visited {
 	color: #000 !important;
 }
 
