work in progress - currently broken!

--- a/templates/submenu_myaccount.tmpl
+++ b/templates/submenu_myaccount.tmpl
@@ -23,8 +23,8 @@
       </a>
     </li>
 
-    <li id="menu_patrons_chat">
-      <a href="/cgi-bin/patrons.cgi?rm=chat_form" target="_blank">
+    <li id="menu_myaccount_chat">
+      <a href="/cgi-bin/myaccount.cgi?rm=chat_form" target="_blank">
       Chat
       </a>
     </li>
