--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -113,8 +113,8 @@ $('document').ready(function(){
     });
 
     $("#chatBtn").click(function () {
-        //window.open('/cgi-bin/patrons.cgi?rm=chat_form','fILL chat','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,copyhistory=no,resizable=yes'); 
-        window.open('/cgi-bin/patrons.cgi?rm=chat_form','_blank'); 
+        //window.open('/cgi-bin/myaccount.cgi?rm=chat_form','fILL chat','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,copyhistory=no,resizable=yes'); 
+        window.open('/cgi-bin/myaccount.cgi?rm=chat_form','_blank'); 
     });
 
     $('#resetFont').click(function () {
@@ -336,8 +336,7 @@ $('document').ready(function(){
 	<li><a id="menu_current" href="/cgi-bin/lightning.cgi?rm=current">Current</a></li>
 	<li><a id="menu_history" href="/cgi-bin/lightning.cgi?rm=history">History</a></li>
 	<li><a id="menu_myaccount" href="/cgi-bin/myaccount.cgi?rm=myaccount_settings_form">Account</a></li>
-	<!--    <li><a id="menu_patrons" href="/cgi-bin/patrons.cgi?rm=patrons_form">Patrons</a></li> -->
-	<li><a id="menu_info" href="/cgi-bin/info.cgi?rm=info_contacts_form">Reports</a></li>
+s	<li><a id="menu_info" href="/cgi-bin/info.cgi?rm=info_contacts_form">Reports</a></li>
 	<li><a id="menu_rotations" style="display:none;" href="/cgi-bin/rotations.cgi?rm=receive_form">*Rotations</a></li>
 	<li><a id="menu_rotations_admin" style="display:none;" href="/cgi-bin/rotations_admin.cgi?rm=report_received_cnt">*Admin</a></li>
       </ul>
