--- a/templates/public/contact.tmpl
+++ b/templates/public/contact.tmpl
@@ -10,7 +10,7 @@
 <script type="text/javascript">
 $(document).ready(function(){
     //create a new WebSocket object.
-    var wsUri = "wss://localhost/app/ws/";  
+    var wsUri = "wss://rigel.gotdns.org/app/ws/";  
     websocket = new WebSocket(wsUri);
    
     websocket.onopen = function(ev) { // connection is open
