library connect info updated, and a notice to libraries

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -74,7 +74,7 @@ $('document').ready(function() {
 <div id="main-left" class="tone-box" >
 
   <div class="alert-box" >
-    <p>You can now add patron requests to your <a href="/cgi-bin/myaccount.cgi?rm=myaccount_acquisitions_form">'wish list'</a></p>
+    <p>Canada Post's Library Shipping Tool is currently unable to print return labels. They are aware of the issue and working to resolve it.</p>
   </div>
   <hr>
   <div id="zserver">
