--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -53,7 +53,7 @@ $('document').ready(function(){
           var $input = $(this);
           myAlert += $input.attr('name')+':'+$input.val()+'\n';
         });
-        alert(myAlert);
+        //alert(myAlert);
 
         if (! $.cookie("fILL-authentication")) {
             // these cookies don't exist, so create them.
