added patron barcode as hidden div to make life easier

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -179,6 +179,7 @@
 
 	  <input id="incrFont" class="public-style" type="button" value="+A" /><input id="resetFont" class="public-style" type="button" value="A" /><input id="decrFont" class="public-style" type="button" value="-A" />
           <div id="lid" style="display:none"><TMPL_VAR name="lid"></div>
+          <div id="barcode" style="display:none"><TMPL_VAR name="barcode"></div>
       </div>
     </div>
 
