--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -159,6 +159,7 @@ $('document').ready(function(){
         <div id="username"><TMPL_VAR name="username"></div>
         <p><a href="/cgi-bin/public.cgi?rm=contact_form"><strong><TMPL_VAR name="library"></strong></a></p>
         <div id="lid" style="display:none"><TMPL_VAR name="lid"></div>
+        <div id="barcode" style="display:none"><TMPL_VAR name="barcode"></div>
 	<input id="incrFont" class="public-style" type="button" value="+A" /><input id="resetFont" class="public-style" type="button" value="A" /><input id="decrFont" class="public-style" type="button" value="-A" />
     </div>
   </div>
