tell the user what happened on login failure

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -844,6 +844,13 @@ input[type="button"]:hover.action-button-highlighted {
     border-radius:5px;
 }
 
+#auth-screenmessage {
+    border-radius: 25px;
+    border: 2px solid #FF0000;
+    background-color: #FFFFFF;
+    padding: 20px;
+}
+
 /*------------------------------------------------------*/
 /* from Ohio Web Library */
 #progress_empty {
