new authenticator (TLC), and beginnings of an authentication admin interface

--- a/templates/admin/header.tmpl
+++ b/templates/admin/header.tmpl
@@ -227,6 +227,7 @@ $('document').ready(function(){
     <li><a id="menu_home" href="/cgi-bin/admin.cgi?rm=welcome">Home</a></li>
     <li><a id="menu_test_zserver" href="/cgi-bin/admin.cgi?rm=test_zserver">Test a zServer</a></li>
     <li><a id="menu_load_spruce_ill_numbers" href="/cgi-bin/admin.cgi?rm=spruce_ill">Load Spruce ILL numbers</a></li>
+    <li><a id="menu_authentication" href="/cgi-bin/admin.cgi?rm=authentication">Authentication</a></li>
   </ul>
 </nav>
 
