temporary fix for clicking-title-before-search-is-done... do not let them

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -851,6 +851,11 @@ input[type="button"]:hover.action-button-highlighted {
     padding: 20px;
 }
 
+.disabled-while-searching {
+    pointer-events: none;
+    opacity: 0.4;
+}
+
 /*------------------------------------------------------*/
 /* from Ohio Web Library */
 #progress_empty {
