--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -28,6 +28,7 @@
 
 <script type="text/javascript" src="/js/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="/js/jquery.cookie.js"></script>
+<script type="text/javascript" src="/plugins/jquery-ui-1.11.1/jquery-ui.js"></script>
 
 <script type="text/javascript" src="/js/pz2.js"></script>
 <script type="text/javascript" src="/js/fILL_client-public-1.9.js"></script>
@@ -285,7 +286,7 @@
 
       <div id="pager"></div>
       <div id="navi"></div>
-      <p>Click on a title for more information.</p>
+      <p id="result-instructions">Enter some keywords to begin searching.</p>
       <div id="results"></div>
   </div>
   
