more work on admin side of authentication

--- a/templates/admin/authentication.tmpl
+++ b/templates/admin/authentication.tmpl
@@ -85,10 +85,7 @@
 	  </tr>
 	  <tr>
 	    <td>Authentication type</td>
-	    <td>
-	      <input type="radio" name="nonsipAuthType" value="Biblionet">Biblionet</input><br />
-	      <input type="radio" name="nonsipAuthType" value="FollettDestiny">Follett Destiny</input><br />
-	      <input type="radio" name="nonsipAuthType" value="L4U">L4U</input>
+	    <td id="auth-other-authtypes" style="border:solid 1px">
 	    </td>
 	  </tr>
 	  <tr><td>URL of OPAC</td><td><input id="nonsipURL" name="nonsipURL" size="45"></td></tr>
