update admin zserver check to use searchable table

--- a/templates/admin/pazpar-control.tmpl
+++ b/templates/admin/pazpar-control.tmpl
@@ -6,7 +6,7 @@
 <div id="center" role="main">
 
   <div id="main-left">
-    <div id="scrolling-table">
+    <div id="libraries-table">
       <table id="libraries" class="row-border">
 	<thead>
 	  <tr><th>Symbol</th><th>Library</th>
